[gd_scene load_steps=2 format=3 uid="uid://c8j2u4q3xk1mv"]

[ext_resource type="Script" uid="uid://tofehkuq0nv2" path="res://scripts/ui/options_ui.gd" id="1_k3vpy"]

[node name="OptionsUI" type="VBoxContainer" node_paths=PackedStringArray("shake_slider")]
theme_override_constants/separation = 16
script = ExtResource("1_k3vpy")
shake_slider = NodePath("ShakeContainer/ShakeSlider")

[node name="Title" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1

[node name="ShakeContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="ShakeContainer"]
layout_mode = 2
text = "Screen Shake Intensity"
horizontal_alignment = 1

[node name="ShakeSlider" type="HSlider" parent="ShakeContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1.0
step = 0.1
value = 0.5

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Back"

[connection signal="value_changed" from="ShakeContainer/ShakeSlider" to="." method="_on_shake_value_changed"]
[connection signal="button_up" from="BackButton" to="." method="_on_back_button_button_up"]
